# fexact

./: .gitignore  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  bump-version.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release-drafter.yml  test.yml
docker/: README.md
fisher_acm/: __init__.py  __main__.py  fexact_wrapper.c
fisher_acm/c_ext/: CMakeLists.txt  fexact.c  fexact.h  helpers.c  main.c
src/: CMakeLists.txt  fexact.c  fexact.h  fexact_wrapper.c  helpers.c  helpers.h
tests/: test_fexact.py
tests/test_example/: test_hello.py
