[metadata]
name            = fexact
author          = Boussoffara Alaeddine
author_email    = Boussoffara@me.com
summary         = Exact Fisher test for nxm contingency matrix based on fortran acm 643 and R
description_file = README.md
long_description_content_type = text/markdown
requires_python = >=3.8
project_urls =
    Source Code = https://github.com/boussoffara/fexact
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    fisher, fishertest, fisherexact,

[options.extras_require]
test =
    numpy
    coverage
    tox
    setuptools>=38.0
